// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonPrimitive: getSizeToken function large size, should match snapshot 1`] = `
Object {
  "fontSize": "16px",
  "height": "52px",
  "spinner": Object {
    "height": "24px",
    "width": "24px",
  },
}
`;

exports[`ButtonPrimitive: getSizeToken function normal size, should match snapshot 1`] = `
Object {
  "fontSize": "14px",
  "height": "44px",
  "spinner": Object {
    "height": "24px",
    "width": "24px",
  },
}
`;

exports[`ButtonPrimitive: getSizeToken function small size, should match snapshot 1`] = `
Object {
  "fontSize": "12px",
  "height": "32px",
  "spinner": Object {
    "height": "16px",
    "width": "16px",
  },
}
`;
